--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.3",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.0",
     "sequelize": "^6.17.0"
