--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.26.0",
     "next": "^12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sweetalert2": "^11.4.4"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
